--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,75 +1,55 @@
-name: GitHubPagesForGAP
-version: 0.2
-date: 2017-02-04
+name: hecke
+version: 1.4dev
+date: 2013-07-02
 description: |
-    A GitHub Pages generator for GAP packages
+    Calculating decomposition matrices of Hecke algebras
 
 authors:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: A. U. Thor
+    - name: Dmitriy Traytel
+      url: http://home.in.tum.de/~traytel/hecke/
 
 maintainers:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: Jan Itor
+    - name: The GAP Team
+      url: mailto:support@gap-system.org
 
-GAP: ">=4.8.1"
+GAP: ">=4.8"
 
-needed-pkgs:
-    - name: "GAPDoc"
-      version: ">= 1.2"
-      url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
-    - name: "IO"
-      version: ">= 4.1"
-      url: "https://gap-packages.github.io/io"
-
-suggested-pkgs:
-    - name: "orb"
-      version: ">= 4.2"
-      url: "https://gap-packages.github.io/orb"
-
-www: https://gap-system.github.io/GitHubPagesForGAP/
+www: https://gap-packages.github.io/hecke/
 readme: README.md
-packageinfo: https://gap-system.github.io/GitHubPagesForGAP/PackageInfo.g
-github: https://github.com/gap-system/GitHubPagesForGAP
+packageinfo: https://gap-packages.github.io/hecke/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.gz
-    - name: .tar.bz2
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.bz2
+      url: https://github.com/gap-packages/hecke/releases/download/v1.4dev/hecke-1.4dev.tar.gz
 
 abstract: |
-    This is a pseudo package that contains no actual  <span class="pkgname">GAP</span> code. Instead, it is a template for other  GAP packages that allows to quickly setup GitHub Pages.
+    The <span class="pkgname">Hecke</span> package provides functions for calculating decomposition matrices of Hecke algebras of the symmetric groups and q-Schur algebras. Hecke is a port of the <span class="pkgname">GAP 3</span> package <span class="pkgname">Specht 2.4</span> to <span class="pkgname">GAP 4</span>.
 
-status: other
+status: deposited
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
 keywords: |
-    GitHub Pages, GAP.
+    Hecke, decomposition matrix, Specht module, Schur.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>HTI17</span>]   <b class='BibAuthor'>Horn, M., Thor, A. U. and Itor, J.</b>,
-     <i class='BibTitle'>GitHubPagesForGAP, A GitHub Pages generator for GAP packages,
-             Version 0.2</i>
-     (<span class='BibYear'>2017</span>)<br />
+    [<span class='BibKey'>TT13</span>]   <b class='BibAuthor'>Traytel, D. and GAP Team, T.</b>,
+     <i class='BibTitle'>hecke, Calculating decomposition matrices of Hecke algebras,
+             Version 1.4dev</i>
+     (<span class='BibYear'>2013</span>)<br />
     (<span class='BibNote'>GAP package</span>),
-    <span class='BibHowpublished'><a href="https://gap-system.github.io/GitHubPagesForGAP/">https://gap-system.github.io/GitHubPagesForGAP/</a></span>.
+    <span class='BibHowpublished'><a href="https://gap-packages.github.io/hecke/">https://gap-packages.github.io/hecke/</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ GitHubPagesForGAP0.2,
-      author =           {Horn, M. and Thor, A. U. and Itor, J.},
-      title =            {{GitHubPagesForGAP}, A GitHub Pages generator for GAP packages, {V}ersion 0.2},
-      month =            {Feb},
-      year =             {2017},
+    @misc{ hecke1.4dev,
+      author =           {Traytel, D. and GAP Team, T.},
+      title =            {{hecke}, Calculating decomposition matrices of Hecke algebras, {V}ersion 1.4dev},
+      month =            {Jul},
+      year =             {2013},
       note =             {GAP package},
-      howpublished =     {\href                              {https://gap-system.github.io/GitHubPagesForGAP/}
-                          {\texttt{https://gap-system.github.io/}\discretionary
-                          {}{}{}\texttt{GitHubPagesForGAP/}}},
-      keywords =         {GitHub Pages; GAP},
-      printedkey =       {HTI17}
+      howpublished =     {\href {https://gap-packages.github.io/hecke/} {\texttt{https://gap-packages.github.io/}\discretionary {}{}{}\texttt{hecke/}}},
+      keywords =         {Hecke; decomposition matrix; Specht module; Schur},
+      printedkey =       {TT13}
     }
 
