--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: hecke
-version: 1.4dev
-date: 2013-07-02
+version: 1.5
+date: 2018-09-10
 description: |
     Calculating decomposition matrices of Hecke algebras
 
@@ -20,7 +20,7 @@ packageinfo: https://gap-packages.github.io/hecke/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/hecke/releases/download/v1.4dev/hecke-1.4dev.tar.gz
+      url: https://github.com/gap-packages/hecke/releases/download/v1.5/hecke-1.5.tar.gz
 
 abstract: |
     The <span class="pkgname">Hecke</span> package provides functions for calculating decomposition matrices of Hecke algebras of the symmetric groups and q-Schur algebras. Hecke is a port of the <span class="pkgname">GAP 3</span> package <span class="pkgname">Specht 2.4</span> to <span class="pkgname">GAP 4</span>.
@@ -32,24 +32,27 @@ keywords: |
     Hecke, decomposition matrix, Specht module, Schur.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>TT13</span>]   <b class='BibAuthor'>Traytel, D. and GAP Team, T.</b>,
+    [<span class='BibKey'>TT18</span>]   <b class='BibAuthor'>Traytel, D. and GAP Team, T.</b>,
      <i class='BibTitle'>hecke, Calculating decomposition matrices of Hecke algebras,
-             Version 1.4dev</i>
-     (<span class='BibYear'>2013</span>)<br />
+             Version 1.5</i>
+     (<span class='BibYear'>2018</span>)<br />
     (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/hecke/">https://gap-packages.github.io/hecke/</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ hecke1.4dev,
+    @misc{ hecke1.5,
       author =           {Traytel, D. and GAP Team, T.},
-      title =            {{hecke}, Calculating decomposition matrices of Hecke algebras, {V}ersion 1.4dev},
-      month =            {Jul},
-      year =             {2013},
+      title =            {{hecke},  Calculating  decomposition matrices of Hecke
+                          algebras, {V}ersion 1.5},
+      month =            {Sep},
+      year =             {2018},
       note =             {GAP package},
-      howpublished =     {\href {https://gap-packages.github.io/hecke/} {\texttt{https://gap-packages.github.io/}\discretionary {}{}{}\texttt{hecke/}}},
+      howpublished =     {\href          {https://gap-packages.github.io/hecke/}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{hecke/}}},
       keywords =         {Hecke; decomposition matrix; Specht module; Schur},
-      printedkey =       {TT13}
+      printedkey =       {TT18}
     }
 
