--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   apt_packages:
     - libgmp-dev
     - libreadline-dev
+    - zlib1g-dev
 
 matrix:
   include:
@@ -17,6 +18,7 @@ matrix:
         apt_packages:
           - libgmp-dev:i386
           - libreadline-dev:i386
+          - zlib1g-dev:i386
           - gcc-multilib
           - g++-multilib
 
